# shadowcore

dep/: CMakeLists.txt
dep/recastnavigation/Detour/: DetourNavMesh.cpp  DetourNode.cpp
src/server/collision/: CMakeLists.txt
src/server/collision/Maps/: MapTree.h
src/server/collision/Models/: WorldModel.h
src/server/collision/Pathfinding/: PathInfo.cpp  PathInfo.h
src/tools/: CMakeLists.txt
src/tools/map_extractor/: System.cpp  adt.h
src/tools/mmaps_generator/: CMakeLists.txt  DebugAlloc.cpp  DebugAlloc.h  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp  mMapCommon.h  mMapsGenerator.cpp
src/tools/vmap3_extractor/loadlib/: loadlib.h
